# if_curator

./: .gitignore  README.md  pyproject.toml
if_curator/: cli.py  config.py  diversity.py  embeddings.py  image_processing.py  immich_api.py  logging.py
